objects/ssot__HealthcareProviderTaxonomy__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareProviderId__c</fullName>
        <label>Healthcare Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcareTaxonomyId__c</fullName>
        <label>Healthcare Taxonomy</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Healthcare Provider Taxonomy Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryTaxonomy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Taxonomy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742526785235_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProviderTaxonomy_Healthcar_rel</label>
        <referenceTo>ssot__HealthcareTaxonomy__dlm</referenceTo>
        <relationshipLabel>HealthcareProviderTaxonomy_Healthcar_rel</relationshipLabel>
        <relationshipName>rel_1742526785235_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742526797480_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HealthcareProviderTaxonomy_Healthcar_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>HealthcareProviderTaxonomy_Healthcar_rel</relationshipLabel>
        <relationshipName>rel_1742526797480_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>